<resources>
    <string name="app_name">PRMSU25</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="find_jobs">Find Jobs</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="messaging">Messaging</string>
    <string name="application_history">Application History</string>
    <string name="manage_resume">Manage Resume</string>
    <string name="logout">Logout</string>
    <string name="view_applied_resume">View Applied Resume</string>

    <string name="registerView_welcome">Xin chào!</string>
    <string name="registerView_googleBtn">Đăng kí bằng Google</string>
    <string name="registerView_nameInput">Nhập họ và tên</string>
    <string name="registerView_emailInput">Nhập email</string>
    <string name="registerView_passwordInput">Nhập mật khẩu (6 đến 25 ký tự)</string>
    <string name="registerView_passwordConfirmInput">Nhập lại mật khẩu</string>
    <string name="registerView_divider">Hoặc bằng email</string>
    <string name="registerView_termsAgreeText">Tôi đã đọc và đồng ý với Điều khoản dịch vụ và Chính sách bảo mật của W4U.</string>
    <string name="registerView_registerButton">Đăng kí</string>
    <string name="registerView_alreadyHaveAccount">Đã có tài khoản?</string>">
    <string name="registerView_loginButton">Đăng nhập ngay</string>

    <string name="verifyEmailView_title">Xác thực email</string>
    <string name="verifyEmailView_verifyButton">Xác thực</string>
    <string name="verifyEmailView_codeInputTitle">Nhập mã xác thực</string>

    <string name="error_fetching_jobs">error_fetching_jobs</string>
    <string name="ai_recommended_jobs">Recommend by AI</string>
    <string name="profile_recommended_jobs">Recommend by profile</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="recommended_jobs_desc">Job recommended for you</string>

    <string name="chat_with_recruiter">Messaging</string>
    <string name="chat">Chat</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="back">Go Back</string>
    <string name="avatar">Avatar</string>
    <string name="edit_avatar">Edit Avatar</string>

</resources>