<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verifyemail.VerifyEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/roundedContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="300dp">


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="verifyEmailFragment_verifyCodeLayout,verifyEmailFragment_verifyButton"
            app:flow_verticalAlign="baseline"
            app:flow_verticalGap="12dp"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verifyEmailFragment_verifyCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verifyEmailFragment_verifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verifyEmailView_codeInputTitle"
                android:background="@color/cardview_light_background"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/verifyEmailFragment_verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/verifyEmailView_verifyButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/verifyEmailFragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/verifyEmailView_title"
        android:textSize="22sp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/roundedContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>